# uetyoungsters

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  pytest.ini  requirements.txt  run_pipeline.py
ai-worker-service/: main.py  requirements.txt
backend-api/: Dockerfile  bootstrap.py  database.py  main.py  migrations.py  requirements.txt
career_intelligence_baseline/: README.md
config/: onet_career_map.yaml  sources.yaml
core/: Dockerfile  assessment_store.py  database.py  main.py  models.py  requirements.txt
crawl-service/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
crawl-service/data/: taxonomy.json
crawl-service/src/crawl_service/: __init__.py  __main__.py  career_profiles.py  cli.py  database.py  description_cleaning.py  extraction.py  handoff_validation.py  lifecycle.py  onet_enrichment.py  paths.py  pipeline.py  quality.py  runner.py
crawl-service/src/crawl_service/collectors/: __init__.py  greenhouse.py  onet.py  viecoi.py
crawl-service/src/crawl_service/shared_contracts/: __init__.py  market.py  schemas.py  taxonomy.py
demo/: README.md  demo_profile.json
docs/: ai-worker-gateway.md  career-compass-notes.md  career-compass-schema-draft.md  data-contracts.md  data-layer-phase1.md  database-notes.md  demo-accounts.md  frontend-response-contract-review.md  rbac-implementation.md  student-companion-e2e-integration.md  student-companion-live-llm-audit.md  student-profile-analysis-contract.md
experiments/: README.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
scripts/: dev.ps1  (+8 more)
(+225 files in other folders)
